# OMF-Parser

./: .gitignore  .gitmodules  README.md  build.sh  build_entry.py  pyproject.toml  pyrightconfig.json  schema.json
docs/: easy_omf.md
docs/COMENT/: 0xFE.md
docs/OMF_spec/: 01_OMF_Fundamentals_and_Record_Structure.md  02_OMF_Headers_Comments_and_Module_Meta.md  03_OMF_Segments_Groups_and_Relocation.md  04_OMF_Data_Records_and_Local_Symbols.md  05_OMF_COMDAT_and_Modern_Extensions.md  06_OMF_Appendices_Libraries_and_Obsolete.md
docs/SS0288/: CODEVIEW.txt  DICTIONARY.txt  LIBRARY_FORMAT.txt  PharLap.txt
docs/WATCOM/: CMT_DISASM_DIRECTIVE.md  CMT_LINKER_DIRECTIVE.md  CMT_WAT_PROC_MODEL.md
docs/intel/: intel-omf86-secondary-targets-pbit.md
src/omf_parser/: __init__.py  __main__.py  cli.py  constants.py  detect.py  file.py  formatters.py  models.py  omf_dump.py  omf_parser.py  parsing.py  parsing_utils.py  protocols.py  scanner.py  variant.py
src/omf_parser/coment/: __init__.py  intel.py  microsoft.py  standard.py  watcom.py
src/omf_parser/handlers/: __init__.py  data.py  library.py  microsoft.py  obsolete.py  standard.py
src/omf_parser/handlers/extensions/: __init__.py
src/omf_parser/handlers/extensions/borland/: __init__.py  dependency_file.py
src/omf_parser/handlers/extensions/intel/: __init__.py  dosseg.py  (+11 more)
src/omf_parser/records/: __init__.py  alias.py  bakpat.py  comdat.py  comdef.py  data.py  extdef.py  fixupp.py  grpdef.py  ledata.py  library.py  lidata.py  linnum.py  linsym.py  lnames.py  locsym.py  microsoft.py  modend.py  obsolete.py  pubdef.py  segdef.py  standard.py  theadr.py  typdef.py  vendext.py  vernum.py
(+20 files in other folders)
